# 9jalingo-vllm

./: .gitignore  LICENSE  README.md  colab_gpu_test.ipynb  config.py  prepare_model.py  pyproject.toml  server.py  test_rtf.py
audio/: __init__.py  encoder.py  player.py  streaming.py
generation/: __init__.py  chunking.py  direct_generator.py  vllm_generator.py
speakers/: __init__.py  abdullahi_ha.pt  abimbola_yo.pt  abisoye_yo.pt  abubakar_ha.pt  ada_pcm.pt  adaeze_ig.pt  adanna_ig.pt  adaora_ig.pt  adekunle_yo.pt  adeniyi_yo.pt  adeola_yo.pt  adetokunbo_yo.pt  adetola_yo.pt  adunni_yo.pt  afolake_yo.pt  aisha_ha.pt  aisha_pcm.pt  aliyu_ha.pt  amarachi_ig.pt  awulika_ig.pt  ayomide_yo.pt  azubuike_ig.pt  babajide_yo.pt  babatunde_yo.pt  bello_ha.pt  bilkisu_ha.pt  bimpe_yo.pt  binta_ha.pt  blessing_pcm.pt  bola_pcm.pt  boluwatife_yo.pt  bose_pcm.pt  bright_pcm.pt  bunmi_pcm.pt  busayo_yo.pt  charles_pcm.pt  chiamaka_ig.pt  chibueze_ig.pt  chidimma_ig.pt  (+203 more)
