[project]
name = "9jalingo-vllm"
version = "0.2.0"
description = "High-performance TTS for Nigerian languages with speaker embeddings and voice cloning, powered by vLLM"
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = "==3.12.*"
dependencies = [
    "naijalingo-tts-2==0.1.1",
    "fastapi",
    "uvicorn[standard]",
    "soundfile",
    "python-multipart",
    "python-dotenv",
]

[project.scripts]
serve = "server:main"

# ── CPU vs GPU switch ────────────────────────────────────────
# CURRENT: CPU mode (install via uv pip, see README)
# GPU mode: uv pip install vllm --torch-backend=auto
# ─────────────────────────────────────────────────────────────

[tool.uv.pip]
torch-backend = "cpu"                 # GPU: change to "auto"

[tool.hatch.build.targets.wheel]
packages = ["audio", "generation", "speakers"]
include = ["server.py", "config.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
